API docs update
